--- a/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/homepage/homepage.html
@@ -58,7 +58,7 @@
                 <div class="carousel-caption">
                     <p class="animated fadeInRight">Đăng yêu cầu 1 phút</p>
                     <h1 class="animated fadeInLeft">Nhận &amp; so sánh nhiều báo giá minh bạch</h1>
-                    <a class="btn animated fadeInUp" th:href="@{/homepage/request}">Đăng yêu cầu</a>
+                    <a class="btn animated fadeInUp" th:href="@{/request}">Đăng yêu cầu</a>
                 </div>
             </div>
 
