--- a/Furniture-Moving-Project/src/main/resources/templates/provider/services.html
+++ b/Furniture-Moving-Project/src/main/resources/templates/provider/services.html
@@ -2,7 +2,7 @@
 <html lang="vi" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>PV-002 • Bảng giá & Dịch vụ</title>
+    <title>Bảng giá & Dịch vụ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Inject từ controller -->
